# ucdmcmc

./: .gitignore  LICENSE  MANIFEST.in  README.md  gridfit__parameters.xlsx  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb
.github/workflows/: pypi-publish.yml  python-package.yml
models/: models_atmo20_JWST-NIRSPEC-MIRI.h5  models_atmo20_JWST-NIRSPEC-PRISM.h5  models_atmo20_NIR.h5  models_atmo20_SPEX-PRISM.h5  models_atmo20pp_EUCLID.h5  models_atmo20pp_JWST-MIRI-LRS.h5  models_atmo20pp_JWST-NIRSPEC-MIRI.h5  models_atmo20pp_JWST-NIRSPEC-PRISM.h5  models_atmo20pp_NIR.h5  models_atmo20pp_SPEX-PRISM.h5  models_atmos_NIR.h5  models_atmos_SPEX-PRISM.h5  models_btdusty16_EUCLID.h5  models_btdusty16_JWST-MIRI-LRS.h5  models_btdusty16_JWST-NIRSPEC-MIRI.h5  models_btdusty16_JWST-NIRSPEC-PRISM.h5  models_btdusty16_NIR.h5  models_btdusty16_SPEX-PRISM.h5  models_btsettl08_EUCLID.h5  models_btsettl08_JWST-NIRSPEC-MIRI.h5  models_btsettl08_JWST-NIRSPEC-PRISM.h5  models_btsettl08_SPEX-PRISM.h5  models_burrows06_EUCLID.h5  models_burrows06_JWST-NIRSPEC-PRISM.h5  models_burrows06_SPEX-PRISM.h5  models_dback24_EUCLID.h5  models_dback24_JWST-MIRI-LRS.h5  models_dback24_NIR.h5  models_helios_JWST-MIRI-LRS.h5  models_helios_JWST-NIRSPEC-MIRI.h5  models_helios_JWST-NIRSPEC-PRISM.h5  models_karalidi21_EUCLID.h5  models_karalidi21_JWST-NIRSPEC-MIRI.h5  models_karalidi21_JWST-NIRSPEC-PRISM.h5  models_karalidi21_NIR.h5  models_karalidi21_SPEX-PRISM.h5  models_lacy23_EUCLID.h5  models_lacy23_JWST-MIRI-LRS.h5  models_lacy23_JWST-NIRSPEC-G395H.h5  models_lacy23_JWST-NIRSPEC-PRISM.h5  (+20 more)
notebooks/: tutorial.ipynb
opacities/exomol/: 12C-16O2_500-12000_600K_1.000000.sigma  12C-16O_500-12000_600K_0.250000.sigma  12C-1H4_1500-5000_350K_0.400000.sigma  12C-1H4_500-11999_600K_0.250000.sigma  14N-1H3_1500-5000_350K_0.400000.sigma  14N-1H3_500-11999_600K_0.250000.sigma  14N-1H3_500-11999_600K_1.000000.sigma  16O-1H_500-12000_600K_1.000000.sigma  1H-12C-14N_1500-5000_350K_0.400000.sigma  1H-19F_1500-5000_350K_0.400000.sigma  1H2-16O_1500-5000_500K_0.400000.sigma  1H2-32S_1500-5000_350K_0.400000.sigma  23Na-1H_1500-5000_350K_0.400000.sigma  28Si-16O2_500-5999_600K_1.000000.sigma  28Si-1H4_1500-4999_350K_0.400000.sigma  28Si-1H4_500-4999_600K_1.000000.sigma  31P-1H3_1500-5000_350K_0.400000.sigma  31P-1H3_500-9999_600K_0.250000.sigma  31P-1H3_500-9999_600K_1.000000.sigma  32S-16O2_1500-5000_350K_0.400000.sigma  39K-35Cl_500-2999_600K_1.000000.sigma  7Li-16O-1H_1500-5000_350K_0.400000.sigma
spectra/: JWST-NIRSPEC-MIRI_J1624+0029_Beiler2024.csv  NIR_TRAPPIST1_Davoudi2024.csv  SPEX-PRISM_J0559-1404_Burgasser2006.csv
tests/: test_basic.py  test_fitting.py  test_models.py  test_sample.py  test_spectrum.py  test_wave.py
ucdmcmc/: README.md  __init__.py  core.py  setup.py
(+84 files in other folders)
