[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ucdmcmc"
#version = "2024.08.08"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy",
    "astroquery",
    "corner",
    "matplotlib",
    "numpy>=2.0",
    "pandas",
    "pytables",
    "requests",
    "scipy",
    "statsmodels",
    "tqdm",
    "importlib_resources; python_version < '3.7'",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff"
    ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.h5","*.csv"] # includes the data files in models/

[tool.setuptools_scm]
