[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ucdmcmc"
description = "MCMC fitting code for low temperature atmosphere spectra"
authors = [
  {name = "Adam Burgasser", email = "aburgasser@ucsd.edu"},
]
maintainers = [
  {name = "Adam Burgasser", email = "aburgasser@ucsd.edu"},
]
#version = "v1.0.1"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "astropy",
    "astroquery",
    "corner",
    "emcee",
    "matplotlib",
    "numpy<2.0",
    "pandas",
    "tables",
    "requests",
    "scipy",
    "statsmodels",
    "tqdm",
    "importlib_resources; python_version < '3.7'",
]
dynamic = ["version"]
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/aburgasser/ucdmcmc.git"
Issues = "https://github.com/aburgasser/ucdmcmc/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "ruff"
    ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.h5","*.csv"] # includes the data files in models/

[tool.setuptools_scm]

